force-app/main/default/objects/Test_Coverage__c/Test_Coverage__c.object-meta.xml
<CustomObject>
    <description>This is a junction object that links the Components to Test Cases</description>
    <label>Test Coverage</label>
    <nameField>
        <displayFormat>CVRG-{00000}</displayFormat>
        <label>Test Coverage No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Coverage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>