force-app/main/default/objects/Test_Coverage__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Component</label>
    <referenceTo>Component__c</referenceTo>
    <relationshipLabel>Test Coverage</relationshipLabel>
    <relationshipName>Test_Coverage</relationshipName>
    <type>Lookup</type>
</CustomField>