force-app/main/default/objects/Test_Coverage__c/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <description>Formula pulling the Component Type field from the related Component</description>
    <formula>TEXT(Component__r.Component_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula pulling the Component Type field from the related Component</inlineHelpText>
    <label>Component Type</label>
    <type>Text</type>
</CustomField>