force-app/main/default/objects/Test_Coverage__c/fields/Functionality__c.field-meta.xml
<CustomField>
    <fullName>Functionality__c</fullName>
    <description>Formula field pulling the Description field from the related Test Case record</description>
    <formula>Test_Case__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field pulling the Description field from the related Test Case record</inlineHelpText>
    <label>Functionality</label>
    <type>Text</type>
</CustomField>