force-app/main/default/objects/Test_Coverage__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>Formula that pulls from the Standard or Custom Object fields on the parent Component record</description>
    <formula>IF(
  NOT(ISBLANK(TEXT(Component__r.Standard_Object__c))),
  TEXT(Component__r.Standard_Object__c),
  Component__r.Custom_Object__c
)</formula>
    <inlineHelpText>Which object does this Component Version relate to?</inlineHelpText>
    <label>Object</label>
    <type>Text</type>
</CustomField>