force-app/main/default/objects/Test_Coverage__c/fields/Test_Case__c.field-meta.xml
<CustomField>
    <fullName>Test_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Case</label>
    <referenceTo>Test_Case__c</referenceTo>
    <relationshipLabel>Test Coverage</relationshipLabel>
    <relationshipName>Test_Coverage</relationshipName>
    <type>Lookup</type>
</CustomField>